fix GraphWidget excess padding bottom on mobile screens

--- a/src/main/resources/src/components/MainPage/GeneralPage/GraphWidget/GraphWidget.scss
+++ b/src/main/resources/src/components/MainPage/GeneralPage/GraphWidget/GraphWidget.scss
@@ -104,7 +104,7 @@
             width: 100%;
             padding: 5px 0px;
             padding-top: 15px;
-            padding-bottom: 60px;
+            padding-bottom: 10px;
             max-height: 380px;
             .graph-widget__chart {
                 max-height: 300px;
